--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -2,10 +2,11 @@
 consul_cluster_size: 3
 
 consul_servers: 
-  #  If you have public/private IPs (e.g. at EC2) you want these to be the private IPs
-  - 52.25.217.207
-  - 52.25.217.39
-  - 52.25.217.39
+  #  If you have public/private IPs (e.g. at EC2) you may want these to be 
+  # the private IPs, but public ones may work too (depending on Firewall rules).
+  - 172.31.37.27
+  - 172.31.37.28
+  - 172.31.37.25
 
 
 ansible_ssh_private_key_file: ssh/private-key.pem
