--- a/group_vars/webheads.yml
+++ b/group_vars/webheads.yml
@@ -1,3 +1,4 @@
 ---
 consul_groupname: "webheads"
-service_port: 3000
+shell_user: ubuntu # User you typically log into the servers as. Will get permissions to admin Docker containers.
+service_port: 5000
