--- a/roles/common_baseline/tasks/main.yml
+++ b/roles/common_baseline/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-
+  
   - name: "Update APT cache"
     apt: update_cache=yes
 
@@ -7,6 +7,7 @@
     apt: name={{ item }} state=present
     with_items:
       - vim
+      - wget
       - curl
       - zip
       - unzip      
