--- a/group_vars/webheads.yml
+++ b/group_vars/webheads.yml
@@ -1,4 +1,4 @@
 ---
-consul_servicename: "webheads"
+consul_servicename: "microservice-hello"
 shell_user: ubuntu # User you typically log into the servers as. Will get permissions to admin Docker containers.
 service_port: 5000
