--- a/roles/docker-hosts/tasks/install-docker.yml
+++ b/roles/docker-hosts/tasks/install-docker.yml
@@ -1,7 +1,34 @@
 ---
  
-  - name: "Update APT cache"
-    apt: update_cache=yes
+  #- name: "Update APT cache"
+  #  apt: update_cache=yes
+    
+    
+  - name: Find the latest available version of linux-image-extra
+    shell: "apt-cache search linux-image-extra | grep linux-image-extra-.*-generic | tail -1 | awk '{print $1;}'"
+    register: linux_image_extra
+    # the .stdout should be something like: linux-image-extra-3.19.0-23-generic
+    
+    
+  - name: Install dependencies and updates to enable overlayfs support
+    apt:
+      name: "{{ item }}"
+      state: present
+    with_items:
+      - "{{linux_image_extra.stdout}}"
+  
+  - name: Reboot servers to let overlayfs support kick-in.
+    command: /sbin/shutdown -r now
+    register: reboot_result
+  
+  - name: Wait for instance to come online (5 minute timeout)
+    sudo: false
+    local_action:
+      module: wait_for
+              host={{ inventory_hostname }}
+              port=22
+              delay=1
+              timeout=300    
   
   - name: Add Docker repository key
     apt_key:
@@ -25,13 +52,13 @@
   - name: Install pip
     apt: name="python-pip" state="present"
     
-  #- name: Set docker daemon options
-  #  copy:
-  #    content: "DOCKER_OPTS=\" -s overlay\""
-  #    dest: /etc/default/docker
-  #    owner: root
-  #    group: root
-  #    mode: 0644
+  - name: Set docker daemon options to switch from devicemapper to overlayfs. Devicemapper is flaaaakyyyy
+    copy:
+      content: "DOCKER_OPTS=\"-g /data/docker -s overlay\""
+      dest: /etc/default/docker
+      owner: root
+      group: root
+      mode: 0644
   
   - name: Upgrade version of pip
     shell: easy_install -U pip
@@ -39,14 +66,40 @@
   - name: Install docker python library
     shell: pip install docker-py
     #ignore_errors: true # docker-py installation is not quite idempotent.
-      
-  - name: Start docker-lxc
-    service:
-      name: docker
-      state: started
   
   - name: "Add docker group"
     group: name=docker state=present
   
   - name: Add default \"ubuntu\" user (for AWS) docker group
     shell: "usermod -aG docker ubuntu"
+  
+  - name: Check if /etc/updatedb.conf exists
+    stat:
+      path: /etc/updatedb.conf
+    register: updatedb_conf_exists
+  
+  - name: Ensure updatedb does not index /var/lib/docker
+    lineinfile:
+      dest: /etc/updatedb.conf
+      state: present
+      backrefs: yes
+      regexp: '^PRUNEPATHS="(/var/lib/docker )?(.*)"$'
+      line: 'PRUNEPATHS="/var/lib/docker \2"'
+    when: updatedb_conf_exists.stat.exists  
+  
+  - name: Check if /etc/default/ufw exists
+    stat:
+      path: /etc/default/ufw
+    register: ufw_default_exists
+  
+  - name: Change ufw default forward policy from drop to accept
+    lineinfile:
+      dest: /etc/default/ufw
+      regexp: "^DEFAULT_FORWARD_POLICY="
+      line: "DEFAULT_FORWARD_POLICY=\"ACCEPT\""
+    when: ufw_default_exists.stat.exists
+  
+  - name: Start docker-lxc
+    service:
+      name: docker
+      state: restarted
