--- a/roles/docker-hosts/tasks/install-docker.yml
+++ b/roles/docker-hosts/tasks/install-docker.yml
@@ -1,30 +1,34 @@
 ---
- 
-  - name: "Update APT cache"
-    apt: update_cache=yes    
-      
-  - name: Add Docker repository key
-    apt_key:
-      id: "A88D21E9"
-      url: "http://get.docker.io/gpg"
-      state: present
-  
+
+  # @see: https://docs.docker.com/installation/ubuntulinux/
+
+  # This has bug, right now: https://github.com/ansible/ansible-modules-core/issues/2356
+  #
+  # - name: Add Docker repository key
+  #   apt_key:
+  #     id: "58118E89F3A912897C070ADBF76221572C52609D"
+  #     url: "hkp://pgp.mit.edu:80"
+  #     state: present
+
+  - name: "Add Docker Repository Key"
+    shell: "sudo apt-key adv --keyserver hkp://pgp.mit.edu:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D"
+
   - name: Add Docker repository and update apt cache
     apt_repository:
-      repo: "deb https://get.docker.com/ubuntu docker main"
+      repo: "deb https://apt.dockerproject.org/repo ubuntu-trusty main"
       update_cache: yes
       state: present
 
   - name: Install (or update) docker package
     apt:
-      name: "lxc-docker"
+      name: "docker-engine"
       state: latest
       update_cache: yes
       cache_valid_time: 600
       
   - name: Install pip
     apt: name="python-pip" state="present"
-    
+
   - name: Set docker daemon options to switch from devicemapper to overlayfs. Devicemapper is flaaaakyyyy
     copy:
       content: "DOCKER_OPTS=\"-g /data/docker -s overlay\""
@@ -38,7 +42,6 @@
     
   - name: Install docker python library
     shell: pip install docker-py
-    #ignore_errors: true # docker-py installation is not quite idempotent.
   
   - name: "Add docker group"
     group: name=docker state=present
@@ -71,8 +74,11 @@
       regexp: "^DEFAULT_FORWARD_POLICY="
       line: "DEFAULT_FORWARD_POLICY=\"ACCEPT\""
     when: ufw_default_exists.stat.exists
-  
-  - name: Start docker-lxc
+
+  - name: Install Docker Compose
+    shell: "pip install -U docker-compose"
+
+  - name: Start docker-engine
     service:
       name: docker
       state: restarted
